[gd_scene load_steps=5 format=2]

[ext_resource path="res://Components/Player/Grapple.gd" type="Script" id=1]
[ext_resource path="res://Sprites/chara-spoon.png" type="Texture" id=2]
[ext_resource path="res://Sound/throw.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[node name="Grapple" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 14
script = ExtResource( 1 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 1 )

[node name="Spoon" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( -4, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="AudioThrow" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -25.0

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
